New dataset Fixed java options for gatling Adjusted number of users per instance to 25